--- a/src/Components/OfferBox/OfferBox.module.scss
+++ b/src/Components/OfferBox/OfferBox.module.scss
@@ -13,24 +13,23 @@
   transition: transform 0.5s ease-in-out;
 }
 
-.redDott {
-  &::before {
-    content: "";
-    width: 22px;
-    height: 22px;
-    background-color: $active-box;
-    border-radius: 50%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    translate: -50% -50%;
-  }
-  .offerName {
-    margin: 0;
-  }
-  .newOffer {
-    margin: 0;
-  }
+.redDott:before {
+  content: "";
+  width: 22px;
+  height: 22px;
+  background-color: $active-box;
+  border-radius: 50%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  translate: -50% -50%;
+}
+
+.offerName {
+  margin: 0;
+}
+.newOffer {
+  margin: 0;
 }
 @media (hover: hover) {
   .offerBox:hover {
